Remove deprecated code and adjust tests